retrieveNA31/objects/Core_IPS_Account__c.object
<CustomObject>
    <fields>
        <fullName>Core_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IPS_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Project__c</fullName>
        <label>Premier Support Project</label>
        <referenceTo>Core_IPS_Project__c</referenceTo>
        <relationshipLabel>Premier Support Project Accounts</relationshipLabel>
        <relationshipName>IPS_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Members__c</fullName>
        <label>Members</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selective</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Premier Support Project Account</label>
    <nameField>
        <displayFormat>IPS AN-{00000000}</displayFormat>
        <label>Premier Support Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Support Project Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_PreventEdit</fullName>
        <active>true</active>
        <errorConditionFormula>OR((ISCHANGED(Core_Members__c)),(ISCHANGED(Core_Account__c )))</errorConditionFormula>
        <errorMessage>Please do not attempt to change the values once created</errorMessage>
    </validationRules>
</CustomObject>